hphp/hack/test/typecheck/switch_change_type2.php.like_types.exp
File "switch_change_type2.php", line 12, characters 21-24:
Invalid argument (Typing[4110])
File "switch_change_type2.php", line 12, characters 12-14:
Expected int
File "switch_change_type2.php", line 12, characters 21-24:
But got bool
